--- a/QuickPollUI/App.razor
+++ b/QuickPollUI/App.razor
@@ -1,5 +1,4 @@
-﻿
-<ModalWrapper>
+﻿<ModalWrapper>
     <CascadingAuthenticationState>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
@@ -19,4 +18,3 @@
         </Router>
     </CascadingAuthenticationState>
 </ModalWrapper>
-
