--- a/QuickPollUI/Shared/ModalWrapper.razor
+++ b/QuickPollUI/Shared/ModalWrapper.razor
@@ -37,7 +37,7 @@
 
     private bool showModal;
     private string modalPosition;
-    private Type ComponentType = typeof(TempComponent);
+    private Type ComponentType = typeof(LoginComponent);
     private Dictionary<string, object> ComponentParameters;
     private bool copyLinkConfirmation;
     private bool copyPollIdConfirmation;
