--- a/QuickPollUI/Pages/PollDetailsPage.razor
+++ b/QuickPollUI/Pages/PollDetailsPage.razor
@@ -4,6 +4,8 @@
 @inject NavigationManager _nav
 @implements IAsyncDisposable
 
+<PageTitle>Poll Details</PageTitle>
+
 @if (_poll is not null)
 {
     <div class="question-container">
