--- a/QuickPollUI/App.razor
+++ b/QuickPollUI/App.razor
@@ -1,4 +1,4 @@
-﻿<ModalWrapper>
+﻿<CascadingModalWrapper>
     <CascadingAuthenticationState>
         <Router AppAssembly="@typeof(App).Assembly">
             <Found Context="routeData">
@@ -17,4 +17,4 @@
             </NotFound>
         </Router>
     </CascadingAuthenticationState>
-</ModalWrapper>
+</CascadingModalWrapper>
