--- a/QuickPollUI/Shared/NoAuth.razor
+++ b/QuickPollUI/Shared/NoAuth.razor
@@ -2,7 +2,7 @@
 @code {
 
     [CascadingParameter]
-    public ModalWrapper ModalWrapperComponent { get; set; }
+    public CascadingModalWrapper ModalWrapperComponent { get; set; }
 
     MouseEventArgs mouseArgs;
 
