support link fix

--- a/QuickPollUI/Pages/InfoPage.razor
+++ b/QuickPollUI/Pages/InfoPage.razor
@@ -9,7 +9,7 @@
     </InfoAccordionSectionComponent>
 
     <InfoAccordionSectionComponent Collapsed="true" Value="Support">
-        Email Support: <span class="link-support">quickpollsupport@gmail.com</span>
+        Email Support: <NavLink href="mailto:support@betbookgaming.com" class="link-support">quickpollsupport@gmail.com</NavLink>
     </InfoAccordionSectionComponent>
 </div>
 
