--- a/QuickPollUI/App.razor
+++ b/QuickPollUI/App.razor
@@ -12,7 +12,7 @@
             <NotFound>
                 <PageTitle>Not found</PageTitle>
                 <LayoutView Layout="@typeof(MainLayout)">
-                    <p role="alert">Sorry, there's nothing at this address.</p>
+                    <p style="color: #fff;margin: 2em auto;width: 50%;text-align: center;font-size: 30px;" role="alert">Sorry, there's nothing at this address.</p>
                 </LayoutView>
             </NotFound>
         </Router>
