--- a/QuickPollUI/Pages/InfoPage.razor
+++ b/QuickPollUI/Pages/InfoPage.razor
@@ -7,17 +7,15 @@
     <link rel="sitemap" type="application/xml" title="Sitemap" href="@(NavigationManager.BaseUri)sitemap.xml" />
     <link rel="alternate" type="application/rss+xml" href="@(NavigationManager.BaseUri)atom.xml">
     <link rel="canonical" href="@(NavigationManager.BaseUri)info" />
-
-
 </HeadContent>
 
 
 <div class="accordion-container">
-    <InfoAccordionSectionComponent Collapsed="true" Value="What is Quick Poll?">
-        Quick Poll allows users to create a poll for their followers to vote on as quick and as seamlessly as possible.  After creating an account, just navigate to "Explore All Polls", click the tab "Create Poll", and then fill in the form.  You will be supplied with a poll id for your new poll and a poll link to share with your followers.
+    <InfoAccordionSectionComponent Collapsed="true" Title="What is Quick Poll?">
+        Quick Poll allows users to quickly create a poll for their followers to vote on.  After creating an account, just navigate to "Explore All Polls", click on the "Create Poll" tab, and then fill in the form.  You will be supplied with a poll id for your new poll and a poll link to share with your followers.
     </InfoAccordionSectionComponent>
 
-    <InfoAccordionSectionComponent Collapsed="true" Value="Support">
+    <InfoAccordionSectionComponent Collapsed="true" Title="Support">
         Email Support: <NavLink href="mailto:support@betbookgaming.com" class="link-support">quickpollsupport@gmail.com</NavLink>
     </InfoAccordionSectionComponent>
 </div>
