--- a/QuickPollUI/Components/InfoAccordionSectionComponent.razor
+++ b/QuickPollUI/Components/InfoAccordionSectionComponent.razor
@@ -9,12 +9,11 @@
         {
             <span>➖</span>
         }
-        @Title
     </div>
-    @if (!string.IsNullOrEmpty(Value))
+    @if (!string.IsNullOrEmpty(Title))
     {
-        <div class="value">
-            <h4><span class="badge badge-success">@Value</span></h4>
+        <div class="title">
+            <h4><span class="badge badge-success">@Title</span></h4>
         </div>
     }
     @if (!Collapsed)
@@ -31,7 +30,6 @@
     [Parameter] public RenderFragment ChildContent { get; set; }
     [Parameter] public bool Collapsed { get; set; }
     [Parameter] public string Title { get; set; }
-    [Parameter] public string Value { get; set; }
 
     void Toggle()
     {
@@ -59,10 +57,6 @@
     }
 
     .collapsable .title {
-        display: table-cell;
-    }
-
-    .collapsable .value {
         display: table-cell;
         text-align: right;
     }
