--- a/QuickPollUI/Components/PollDetailsComponent.razor
+++ b/QuickPollUI/Components/PollDetailsComponent.razor
@@ -122,7 +122,7 @@
 
     .option-text {
         font-weight: 700;
-        font-family: 'News Cycle', sans-serif;
+        font-family: 'Chakra Petch', sans-serif;
         color: #fff;
         text-shadow: 0 1px 1px #000, 0 1px 2px #000, 0 1px 3px #000, 0 1px 4px #000, 0 1px 5px #000, 0 1px 6px #000, 0 1px 7px #000;
     }
