--- a/QuickPollUI/_Imports.razor
+++ b/QuickPollUI/_Imports.razor
@@ -13,3 +13,4 @@
 @using System.Timers
 @using Microsoft.AspNetCore.SignalR.Client
 @using QuickPollLibrary.Helpers
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
