--- a/QuickPollUI/Components/SearchBarComponent.razor
+++ b/QuickPollUI/Components/SearchBarComponent.razor
@@ -1,9 +1,7 @@
 ﻿
-<input 
-    type="text" 
-    @bind="@_searchText"
-    @bind:event="oninput"
-    @bind:after="OnSearchInput"
+<CustomInputText 
+    @bind-Value="@_searchText"
+    BindAfter="OnSearchInput"
     placeholder="🔍 Search" 
     />
 
