--- a/QuickPollUI/Pages/InfoPage.razor
+++ b/QuickPollUI/Pages/InfoPage.razor
@@ -1,9 +1,9 @@
 ﻿@page "/info"
 @inject NavigationManager NavigationManager
 
-<PageTitle>Create A Poll</PageTitle>
+<PageTitle>Quick Poll - Info</PageTitle>
 <HeadContent>
-    <meta name="description" content="Create a poll or explore polls" />
+    <meta name="description" content="Info page for Quick Poll, provides contact info and a site description" />
     <link rel="sitemap" type="application/xml" title="Sitemap" href="@(NavigationManager.BaseUri)sitemap.xml" />
     <link rel="alternate" type="application/rss+xml" href="@(NavigationManager.BaseUri)atom.xml">
     <link rel="canonical" href="@(NavigationManager.BaseUri)info" />
