--- a/QuickPollUI/Pages/_Host.cshtml
+++ b/QuickPollUI/Pages/_Host.cshtml
@@ -8,6 +8,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="William McRoberts" />
+        <meta name="keywords" content="poll, polls, quick poll, search poll, search polls, find poll, create poll, poll info, poll results, poll details" />
         <base href="~/" />
         <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
         <link href="css/site.css" rel="stylesheet" />
