--- a/QuickPollUI/Components/CountDownTimerSimpleComponent.razor
+++ b/QuickPollUI/Components/CountDownTimerSimpleComponent.razor
@@ -1,4 +1,5 @@
-﻿
+﻿@implements IDisposable
+
 @if(!Poll.IsComplete)
 {
     if (Poll.TimeLimit is not null && Poll.StartTime < DateTime.Now)
@@ -111,6 +112,12 @@ else
         }
 
         InvokeAsync(StateHasChanged);
+    }
+
+    public void Dispose()
+    {
+        _timeLimitTimer.Elapsed -= new ElapsedEventHandler(CountDownTimeLimit);
+        _startsInTimer.Elapsed -= new ElapsedEventHandler(CountDownStartsIn);
     }
 }
 
